gcc/testsuite/algol68/compile/error-mode-stropping-14.a68
begin short short int j;
      j := "joo" { dg-error "char.*short short int" }
end
